# calculator

./: .gitignore  Cargo.toml  README.md
src/: compile.sh   main.rs
src/handlers/: controller.rs
src/models/: error_model.rs  mod.rs  model.rs
src/services/: evaluator.rs  evaluator_test.rs  mod.rs
src/utils/: log.rs
