[package]
name = "calculate"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.89"
log = "0.4.22"
flexi_logger = { version = "0.29.1", features = ["async", "compress"] }
actix-web = "4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
holdem-hand-evaluator = { git = "https://github.com/le-poker-club/holdem-hand-evaluator" }
async-trait = "0.1"  # 请根据需要选择最新版本
chrono = "0.4"
serde_json = "1.0.128"
actix-http = "3.9.0"
itertools = "0.12.0"
rand = "0.8"  # 确保版本适合项目需求
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
